# hr_prescan

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUSINESS_LOGIC.md  CLAUDE.md  CODE_STYLE.md  DEVOPS.md  Makefile  README.md  ROADMAP.md  docker-compose.management.yml  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
agents/: backend.md  devops.md  frontend.md  pm.md
backend/: .env.example  Dockerfile  dev_autoreload.py  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
deploy/: docker-compose.management.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.staging.yml
docs/: BUSINESS_LOGIC.md  CODEX_SETUP.md  CODE_STYLE.md  DEVOPS.md  ROADMAP.md  SETUP.md  (+2 more)
e2e/: .env.example  README.md  conftest.py  pyproject.toml
e2e/api/: test_apply_flow.py  test_auth.py  test_candidate_pipeline.py  test_hr_candidates.py  test_multi_company.py  test_my_applications.py  test_notifications.py  test_oauth_hook.py  test_permissions.py  test_prescan_session.py  test_public_jobs.py  test_vacancy_lifecycle.py
e2e/fixtures/: auth.py
e2e/helpers/: api_client.py  factories.py  register_permanent_accounts.py
e2e/llm/: conftest.py  test_interview_advance.py  test_interview_followups.py  test_interview_reject.py  test_language.py
e2e/ui/: test_apply_flow.py  test_auth.py  test_candidate_pipeline.py  test_chat_overlay.py  test_jobs_board.py  test_mobile.py  test_my_applications.py  test_security.py  test_social_auth_flows.py  test_vacancy_lifecycle.py
(+1174 files in other folders)
