[project]
name = "hr-prescan-e2e"
version = "0.1.0"
description = "E2E tests for HR PreScan platform"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0",
    "pytest-playwright>=0.6",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["api", "ui"]
addopts = "-v --tb=short"
markers = [
    "api: API-level tests (no browser)",
    "ui: Browser UI tests",
]
